(rule
 (copy ../main.bc.js hazel.js))

(rule
 (copy ../worker.bc.js worker.js))

(rule
 (targets bundled.js service-worker.js)
 (deps
  prebundle.js
  service-worker-template.js
  (source_tree %{workspace_root}/node_modules))
 (action
  (chdir
   %{workspace_root}
   (run node %{dep:build-prebundle.mjs}))))
